--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
+    
+    <!--  FontAwesome Kit -->
+    <script src="https://kit.fontawesome.com/6a38cf0b11.js" crossorigin="anonymous"></script>
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./css/main.css">
@@ -17,9 +20,13 @@
 <body>
     <div class="container-fluid" id="page-wraper">
         <header>
+            
             <h1>6 Month Academy Free Course</h1>
 
         </header>
+        <nav>
+
+        </nav>
         <main>
 
 
@@ -31,7 +38,7 @@
 
     <!-- Optional JavaScript -->
     <script src="./js/main.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery, Bootstrap JS -->
     <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="./lib/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
