--- a/academyCourse/den3/index.html
+++ b/academyCourse/den3/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/bootstrap.min.css">
 
     <!--  FontAwesome Kit -->
     <script src="https://kit.fontawesome.com/6a38cf0b11.js" crossorigin="anonymous"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./css/main.css">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="../../css/main.css">
+    <title>DEN 3</title>
 </head>
 
 <body>
@@ -22,13 +22,22 @@
         <header>
 
             <h1>6 Month Academy Free Course</h1>
+            <h2>DEN 3</h2>
 
         </header>
-        <nav>
-
-        </nav>
+        <nav>        </nav>
         <main>
 
+
+
+
+
+
+
+
+
+
+            
 
         </main>
 
@@ -48,10 +57,10 @@
     </div>
 
     <!-- Optional JavaScript -->
-    <script src="./js/main.js"></script>
+    <script src="../../js/main.js"></script>
     <!-- jQuery, Bootstrap JS -->
-    <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./lib/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../../lib/jquery/jquery-3.4.1.min.js"></script>
+    <script src="../../lib/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
