--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
 
 <body>
     <div class="container-fluid" id="page-wraper">
-        <header>
+        <header class="header">
 
             <h1>6 Month Academy Free Course</h1>
 
         </header>
-        <nav>
+        <nav class="nav">
 
         </nav>
-        <main>
+        <main class="main">
 
 
         </main>
 
         <footer class="footer text-center">
             <div class="container">
-<ul class="list-inline mb-5">
-<li class="list-inline-item">
-<a class="social-link rounded-circle text-white mr-3" href="#">
-    <i class="fab fa-github"></i>
-</a>
-</li>
+                <ul class="list-inline mb-5">
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="#">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
 
-</ul>
+                </ul>
                 <p>Made &copy; Igor 2019</p>
             </div>
         </footer>
