--- a/academyCourse/lesson-2/index.html
+++ b/academyCourse/lesson-2/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Lesson 2</title>
 </head>
+
 <body>
-    
+    <h1>6 Month Academy Free Course</h1>
+    <h2>DEN 4 Lesson 2</h2>
+    <h3>List</h3>
+
+    <ul>
+        <li>First Item</li>
+        <li>Second Item</li>
+    </ul>
+    <hr>
+    <ol>
+        <li>First item</li>
+        <li>Second item</li>
+    </ol>
+    <hr>
+    <dl>
+        <dt>Coffee</dt>
+        <dd>500 gms</dd>
+        <dt>Milk</dt>
+        <dd>1 lt</dd>
+    </dl>
+    <hr>
+    <h4>Nested Lists</h4>
+    <ul>
+        <li>Tea
+            <ul>
+                <li>Black Tea</li>
+                <li>Green Tea</li>
+            </ul>
+        </li>
+        <li>Coffee</li>
+    </ul>
+    <hr>
+    <ol>
+        <li>Section one
+            <ol type="a">
+                <li>section one</li>
+                <li>section one</li>
+                <li>section one</li>
+            </ol>
+        </li>
+        <li>section two
+            <ol type="I">
+                <li>rimski 1</li>
+                <li>rimski 2</li>
+                <li>rimski 3</li>
+                <li>rimski 4</li>
+            </ol>
+        </li>
+        <li>section tree</li>
+    </ol>
+    <hr>
+    <h3>HTML Blocks / Grouping</h3>
+    <h4>the div Element</h4>
+    <div style="background: black;color: yellow; padding: 20px;">
+        <h2>London</h2>
+        <p>London is capital of England</p>
+    </div>
+
+
+
+
 </body>
+
 </html>
