--- a/academyCourse/lesson-2/index.html
+++ b/academyCourse/lesson-2/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lesson 2</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <div id="primary" class="first-div">
+        <p>id and class never shold be same</p>
+        <h1>First Heading</h1>
+    </div> <!-- /#primary ili pises /.first-div -->
     <h1>6 Month Academy Free Course</h1>
     <h2>DEN 4 Lesson 2</h2>
     <h3>List</h3>
@@ -62,13 +67,66 @@
     <hr>
     <h3>HTML Blocks / Grouping</h3>
     <h4>the div Element</h4>
-    <div style="background: black;color: yellow; padding: 20px;">
-        <h2>London</h2>
-        <p>London is capital of England</p>
+    <div style="width: 50%;">
+        <div style="background: black;color: yellow; padding: 20px;">
+            <h2>London</h2>
+            <p>London is capital of <span style="color:red"> England</span></p>
+        </div>
+
     </div>
+    <h4>the span Element</h4>
+    <p>London and <span style="color: red;">NewYork</span></p>
+    <hr>
+    <h3>DIV and SPAN exercse</h3>
+    <div>
+        <a href="">HOME</a>|
+        <a href="">HOME</a>|
+        <a href="">ABOUT</a>
+        <h5><strong>Content Article</strong></h5>
+        <p>
+            this is example of
+            <span style="color: green;">span tag</span>
+            and the
+            <span style="color: red">div tag</span>
+            with CSS
+        </p>
+    </div>
+    <hr>
+    <h2>HTML CSS</h2>
+    <hr>
+    <h2>HTML Forms</h2>
 
+    <form>
+        first name: <br>
+        <input type="text" name="firstname" required> <br>
+        Last name: <br>
+        <input type="text" name="lastname">
+        <hr>
+        <div>
+            <input type="radio" name="gender" value="female">female <br>
+            <input type="radio" name="gender" value="male"> Male <br>
+            <input type="radio" name="gender" value="other"> other
+        </div>
+        <hr>
+        <div>
+            <input type="checkbox" name="vehnicle1" value="bmw"> bmw <br>
+            <input type="checkbox" name="vehnicle2" value="citroen"> citroen
+        </div>
+        <hr>
+        <div>
+            <select name="cars" id="">
+                <option value="volvo">volvo</option>
+                <option value="citroen">citroen</option>
+                <option value="bmw">bmw</option>
+                <option value="seat">seat</option>
+            </select><br>
+        </div>
+        <input type="week">
+        <hr>
+        <input type="submit" value="Submit">
+        <button type="submit">Isprati</button>
 
-
+    </form>
 
 </body>
 
