--- a/academyCourse/lesson-4/index.html
+++ b/academyCourse/lesson-4/index.html
@@ -6,13 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lesson-4 day6</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Lesson-4 day6</h1>
-    <h2>Margins Paddings</h2>
+    <main>
+        <h1>Lesson-4 day6</h1>
 
 
+        <div>
+            <h2>Margins Paddings</h2>
+
+
+        </div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem error optio harum accusamus natus,
+            laudantium quas placeat perspiciatis, aperiam ut deleniti repellat. Quisquam, doloribus explicabo minus
+            accusamus nihil impedit ab.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, deleniti non, quidem tempore vel enim
+            commodi amet perspiciatis, dolor neque asperiores officia ipsum in quibusdam dolorem? Sapiente optio fuga
+            eaque?</p>
+        <section>
+            <h4 class="first">first h1 exercise </h4>
+           
+            <p class="topP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptatum dolor, molestias inventore nulla, nobis dolores placeat perferendis officia velit quos consectetur similique necessitatibus alias voluptatem eos deleniti ipsam cupiditate?</p>
+        </section>
+        <div class="prazen">
+
+        </div>
+    </main>
 </body>
 
 </html>
