--- a/academyCourse/lesson-4/index.html
+++ b/academyCourse/lesson-4/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <title>Lesson-4 day6</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,12 +34,24 @@
             eaque?</p>
         <section>
             <h4 class="first">first h1 exercise </h4>
-           
+           <h3>Web Developer</h3>
             <p class="topP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptatum dolor, molestias inventore nulla, nobis dolores placeat perferendis officia velit quos consectetur similique necessitatibus alias voluptatem eos deleniti ipsam cupiditate?</p>
         </section>
         <div class="prazen">
 
         </div>
+
+        <section class="card-wraper">
+
+            <article class="card">
+                <img class="card-img" src="img1.jpeg" alt="card image">
+                    <h2 class="card-title">Igor Hristov</h2>
+                   
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, consequatur! Voluptatem alias accusamus, repellendus explicabo rerum sequi. Unde velit quia deleniti magnam quidem, molestias exercitationem libero quae, id minima iure!</p>
+           <a class="card-link" href="#">click me</a>
+                </article>
+
+        </section>
     </main>
 </body>
 
