--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css"> -->
+    <!-- Normalize and grid CSS -->
+    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
 
     <!--  FontAwesome Kit -->
     <script src="https://kit.fontawesome.com/6a38cf0b11.js" crossorigin="anonymous"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>Hello, world!</title>
 </head>
 
 <body>
-    <div class="container-fluid" id="page-wraper">
+    <div id="page-wraper">
         <header class="header">
 
             <h1>6 Month Academy Free Course</h1>
@@ -32,11 +35,11 @@
 
         </main>
 
-        <footer class="footer text-center">
+        <footer class="footer">
             <div class="container">
-                <ul class="list-inline mb-5">
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#">
+                <ul>
+                    <li>
+                        <a href="#">
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
@@ -47,11 +50,8 @@
         </footer>
     </div>
 
-    <!-- Optional JavaScript -->
-    <script src="./js/main.js"></script>
-    <!-- jQuery, Bootstrap JS -->
-    <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./lib/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript -->
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
