--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="header">
 
             <h1>6 Month Academy Free Course</h1>
-
+            <a href="./portfolio/blog/index.html">BLOG team B</a>
         </header>
         <nav class="nav">
 
